# finlab

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  main.py  package-lock.json  package.json  pyproject.toml
api/clients/: edgar_client.py
api/config/: prompts.py  settings.py
api/config/prompts/: __init__.py  fundamental.py  sentiment.py
api/config/queries/: __init__.py
api/migrations/: 001_create_keyword_indexes.py
api/models/: agent.py  ingest.py  rag.py  search.py  ticker_ingest.py
api/routers/: agent.py  ingest.py  rag.py  search.py
api/services/: agent.py  ingest.py  rag.py  search.py
api/utils/: simple_chunker.py
backend/: main.py
backend/api/clients/: news_client.py
backend/api/config/prompts/: aggregation.py  momentum.py
backend/api/config/queries/: fundamental.py  momentum.py  sentiment.py
backend/api/models/: agent.py  news_ingest.py  ticker_result.py
backend/api/routers/: ingest.py  search.py
backend/api/services/: agent.py  embeddings.py  ticker_extractor.py
backend/api/utils/: semantic_chunker.py
backend/tests/test_routers/: test_agent.py  test_search.py
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Navbar.tsx
scratch/: download_models.py
tests/: conftest.py  test_agent_service.py
tests/test_models/: test_schemas.py
tests/test_routers/: test_agent.py
tests/test_services/: test_agent_service.py  test_search_service.py
