[project]
name = "finlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edgartools>=5.30.0",
    "fastapi>=0.136.0",
    "groq>=1.2.0",
    "hdbscan>=0.8.42",
    "instructor>=1.15.1",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "qdrant-client[fastembed]>=1.17.1",
    "trafilatura>=2.0.0",
    "transformers>=5.6.2",
    "uvicorn>=0.44.0",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
